Optimized genshi Transfers, cleaned up the code, styles not in code but css. style-sheets
git-svn-id: http://trac-hacks.org/svn@13306 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/budgetingplugin/trunk/ticketbudgeting/locale/de_DE/LC_MESSAGES/ticketbudgeting.po
+++ b/budgetingplugin/trunk/ticketbudgeting/locale/de_DE/LC_MESSAGES/ticketbudgeting.po
@@ -40,7 +40,7 @@ msgid "Cost"
 msgstr "Aufwand"
 
 msgid "State"
-msgstr "Status in %%"
+msgstr "Status in %"
 
 msgid "Comment"
 msgstr "Kommentar"
