ThemeEnginePlugin : Empty overides by default in ThemeBase . Version = 2.2.1
git-svn-id: http://trac-hacks.org/svn@13362 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/themeengineplugin/trunk/README
+++ b/themeengineplugin/trunk/README
@@ -193,4 +193,4 @@ custom Genshi templates::
         def _modify_wiki(self, req, template, data, content_type): 
             data['var'] = 'value'
 
-Notice that, in sample code, new data will added to render wiki pages. 
+Notice that, in sample code, new data will be added to render wiki pages. 
