--- a/tracrussiantranslation/1.0/locale/ru/LC_MESSAGES/messages.po
+++ b/tracrussiantranslation/1.0/locale/ru/LC_MESSAGES/messages.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Trac 1.0.1\n"
 "Report-Msgid-Bugs-To: trac-dev@googlegroups.com\n"
 "POT-Creation-Date: 2013-01-27 11:21+0900\n"
-"PO-Revision-Date: 2013-09-04 17:43+0300\n"
+"PO-Revision-Date: 2013-09-04 18:28+0300\n"
 "Last-Translator: Dmitri Bogomolov <4glitch@gmail.com>\n"
 "Language-Team: ru_RU <trac-dev@googlegroups.com>\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
@@ -82,12 +82,12 @@ msgstr "Удалить комментарий %(num)s"
 #: tracopt/ticket/deleter.py:140
 #, python-format
 msgid "The ticket #%(id)s has been deleted."
-msgstr "Билет №%(id)s был удален."
+msgstr "Билет #%(id)s был удален."
 
 #: tracopt/ticket/deleter.py:147
 #, python-format
 msgid "The ticket comment %(num)s on ticket #%(id)s has been deleted."
-msgstr "Комментарий %(num)s к билету №%(id)s был удален."
+msgstr "Комментарий %(num)s к билету #%(id)s был удален."
 
 #: tracopt/ticket/deleter.py:167
 #, python-format
@@ -97,18 +97,18 @@ msgstr "Комментарий %(num)s не найден"
 #: tracopt/ticket/templates/ticket_delete.html:11
 #, python-format
 msgid "Delete Ticket #%(id)s"
-msgstr "Удалить билет №%(id)s"
+msgstr "Удалить билет #%(id)s"
 
 #: tracopt/ticket/templates/ticket_delete.html:12
 #: tracopt/ticket/templates/ticket_delete.html:48
 #, python-format
 msgid "Delete comment %(num)s on Ticket #%(id)s"
-msgstr "Удалить комментарий %(num)s для билета №%(id)s"
+msgstr "Удалить комментарий %(num)s для билета #%(id)s"
 
 #: tracopt/ticket/templates/ticket_delete.html:20
 #, python-format
 msgid "Delete [1:Ticket #%(id)s]"
-msgstr "Удалить [1:билет №%(id)s]"
+msgstr "Удалить [1:билет #%(id)s]"
 
 #: tracopt/ticket/templates/ticket_delete.html:32
 msgid "Are you sure you want to delete this ticket?"
@@ -2939,7 +2939,7 @@ msgstr "<number> должен быть числом"
 #: trac/ticket/admin.py:826
 #, python-format
 msgid "Ticket #%(num)s and all associated data removed."
-msgstr "Удален билет №%(num)s и вся связанная информация."
+msgstr "Удален билет #%(num)s и вся связанная информация."
 
 #: trac/ticket/api.py:257
 msgid "Attachment"
@@ -2982,7 +2982,7 @@ msgstr "Билеты %(ranges)s"
 #: trac/ticket/api.py:504
 #, python-format
 msgid "Comment %(cnum)s for Ticket #%(id)s"
-msgstr "Комментарий %(cnum)s для билета №%(id)s"
+msgstr "Комментарий %(cnum)s для билета #%(id)s"
 
 #: trac/ticket/api.py:529
 #, python-format
@@ -3493,7 +3493,7 @@ msgstr "Этап %(name)s"
 #: trac/ticket/roadmap.py:557
 #, python-format
 msgid "Ticket #%(num)s: %(summary)s"
-msgstr "Билет №%(num)s: %(summary)s"
+msgstr "Билет #%(num)s: %(summary)s"
 
 #: trac/ticket/roadmap.py:617
 msgid "Milestones reached"
@@ -3638,7 +3638,7 @@ msgstr "История изменений"
 #: trac/ticket/web_ui.py:816 trac/ticket/web_ui.py:1016
 #, python-format
 msgid "Back to Ticket #%(num)s"
-msgstr "Вернуться к билету №%(num)s"
+msgstr "Вернуться к билету #%(num)s"
 
 #: trac/ticket/web_ui.py:858
 msgid "No differences to show"
@@ -3693,12 +3693,12 @@ msgstr "История обсуждения"
 #: trac/ticket/web_ui.py:1099
 #, python-format
 msgid "Ticket #%(num)s, comment %(cnum)d"
-msgstr "Билет №%(num)s, комментарий %(cnum)d"
+msgstr "Билет #%(num)s, комментарий %(cnum)d"
 
 #: trac/ticket/web_ui.py:1057
 #, python-format
 msgid "No version %(version)d for comment %(cnum)d on ticket #%(ticket)s"
-msgstr "У комментария %(cnum)d к билету №%(ticket)s нет версии %(version)d"
+msgstr "У комментария %(cnum)d к билету #%(ticket)s нет версии %(version)d"
 
 #: trac/ticket/web_ui.py:1097
 msgid "Ticket Comment Diff"
