--- a/themeengineplugin/trunk/themeengine/locale/es/LC_MESSAGES/themeengine.po
+++ b/themeengineplugin/trunk/themeengine/locale/es/LC_MESSAGES/themeengine.po
@@ -22,7 +22,7 @@ msgstr ""
 #: themeengine/templates/admin_theme.html:16
 #: themeengine/templates/admin_theme.html:19
 msgid "Theme"
-msgstr "Apariencia"
+msgstr "Temas"
 
 #: themeengine/admin.py:125
 msgid "Customize"
@@ -60,7 +60,7 @@ msgstr "Habilitar"
 
 #: themeengine/templates/admin_theme_advanced.html:30
 msgid "Style"
-msgstr "Estilos"
+msgstr "Estilos del sitio"
 
 #: themeengine/templates/admin_theme_custom.html:16
 #: themeengine/templates/admin_theme_custom.html:111
